<resources>
    <string name="app_name"><b><i>Blog Ku</i></b></string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="admin">Admin</string>
    <string name="admin_profile">Profile</string>
    <string name="admin_data_kategori">Data Kategori</string>
    <string name="admin_data_penulis">Data Penulis</string>
    <string name="admin_rekap_post">Rekap Postingan</string>
    <string name="admin_dashboard">Dashboard</string>
    <string name="nama">Nama</string>
    <string name="simpan">Simpan</string>
    <string name="logout">Log Out</string>
    <string name="tambah">Tambah</string>
</resources>